feat: integrate Firebase SDK and configure Firestore and Auth
- Added Firebase SDK to package.json
- Updated tsconfig.json to include Firebase paths
- Created FirebaseConfig.ts for initializing Firebase app, Firestore, and Auth
- Configured Metro bundler in metro.config.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,9 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@firebase/auth": ["./node_modules/@firebase/auth/dist/esm5/index.js"],
+      "@/*": ["./*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
