--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/auth": "^21.13.0",
     "@react-navigation/drawer": "^7.3.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.40",
