--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
+    "firebase-function": "^1.4.121",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
