--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "^7.3.3",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
